fixed: z-index issue on task cards and overlay

--- a/src/app/main/content/board/single-task/single-task.component.scss
+++ b/src/app/main/content/board/single-task/single-task.component.scss
@@ -172,6 +172,7 @@
   min-height: 160px;
   max-height: 256px;
   padding: 16px;
+  z-index: 1;
 
   // border-bottom: solid 1px #ccc;
   border-radius: 10px;
